--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,6 +1,6 @@
 include config.mk
 
-CFLAGS += -I. -fPIC -DWLR_USE_UNSTABLE -std=c11
+CFLAGS += -I. -fPIC -DWLR_USE_UNSTABLE
 
 WAYLAND_PROTOCOLS=$(shell pkg-config --variable=pkgdatadir wayland-protocols)
 WAYLAND_SCANNER=$(shell pkg-config --variable=wayland_scanner wayland-scanner)
@@ -10,6 +10,7 @@ CFLAGS += $(foreach p,$(PKGS),$(shell pkg-config --cflags $(p)))
 CFLAGS += -ljulia
 LDLIBS += $(foreach p,$(PKGS),$(shell pkg-config --libs $(p)))
 LDLIBS += -ljulia
+CFiles = $(wildcard *.c)
 
 
 # wayland-scanner is a tool which generates C headers and rigging for Wayland
@@ -29,9 +30,8 @@ xdg-shell-protocol.o: xdg-shell-protocol.h
 config.h: | config.def.h
 	cp config.def.h $@
 
-dwl.o: *.h xdg-shell-protocol.h
-
-dwl: dwl.o xdg-shell-protocol.o
+dwl: xdg-shell-protocol.o
+	$(CC) $(CFLAGS) $(CFiles) $(wildcard *.o) -o dwl
 
 clean:
 	rm -f dwl *.o xdg-shell-protocol.h xdg-shell-protocol.c
