--- a/src/kernel/Makefile
+++ b/src/kernel/Makefile
@@ -1,6 +1,6 @@
 include config.mk
 
-CFLAGS += -g3 -I. -fPIC -DWLR_USE_UNSTABLE
+CFLAGS += -shared -fPIC -DWLR_USE_UNSTABLE
 
 WAYLAND_PROTOCOLS=$(shell pkg-config --variable=pkgdatadir wayland-protocols)
 WAYLAND_SCANNER=$(shell pkg-config --variable=wayland_scanner wayland-scanner)
@@ -10,7 +10,7 @@ CFLAGS += $(foreach p,$(PKGS),$(shell pkg-config --cflags $(p)))
 LDLIBS += -ljulia
 LDLIBS += $(foreach p,$(PKGS),$(shell pkg-config --libs $(p)))
 CFiles = $(filter-out xdg-shell-protocol.c, $(wildcard *.c))
-OUTFILE = juliawm
+OUTFILE = juliawm.so
 
 # wayland-scanner is a tool which generates C headers and rigging for Wayland
 # protocols, which are specified in XML. wlroots requires you to rig these up
@@ -30,6 +30,9 @@ $(OUTFILE): xdg-shell-protocol.o
 	$(CC) $(CFLAGS) $(LDLIBS) $(CFiles) $(wildcard *.o) -o $(OUTFILE)
 
 recompile: clean $(OUTFILE)
+
+wayland-util.so: wayland-util.c
+	$(CC) $(CFLAGS) $(LDLIBS) $(CFiles) -o $@
 
 clean:
 	rm -f $(OUTFILE) *.o xdg-shell-protocol.h xdg-shell-protocol.c
