--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
     - docker
 before_install:
     - sudo apt-get -y install meson
-    - sudo apt-get -y install wayland
+    - sudo apt-get -y install libwayland-dev
     - sudo apt-get -y install julia
 script:
     - mkdir build
