--- a/meson.build
+++ b/meson.build
@@ -4,11 +4,10 @@ pkg = import('pkgconfig')
 wayland_scanner = find_program('wayland-scanner', native: true)
 
 # this variable will be initialized in protocols dir
-localProtocolsDir = 'protocols'
-protocolsDir = run_command(['pkg-config', '--variable=pkgdatadir', 
+protocolsDir = 'protocols'
     'wayland-protocols']).stdout().strip()
 protocols = files(
-    localProtocolsDir + '/wlr-layer-shell-unstable-v1.xml',
-    protocolsDir + '/stable/xdg-shell/xdg-shell.xml',
+    protocolsDir + '/wlr-layer-shell-unstable-v1.xml',
+    protocolsDir + '/xdg-shell.xml',
     )
 subdir('src')
