change add_project_args -> add_global_args

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,4 +1,4 @@
-add_project_arguments('-DWLR_USE_UNSTABLE', '-Werror', '-Wno-uninitialized',
+add_global_arguments('-DWLR_USE_UNSTABLE', '-Werror', '-Wno-uninitialized',
                       language: 'c')
 
 deps = [\
