--- a/src/core/meson.build
+++ b/src/core/meson.build
@@ -4,16 +4,17 @@ inc = include_directories(includeDir)
 
 foreach p:protocols
     pName = run_command('basename', p, '.xml').stdout().strip()
-    cFile = srcDir + pName + '.c'
-    cHeader = includeDir + pName + '.h'
+    prefix = '-protocol'
+    cFile = srcDir / pName + prefix +'.c'
+    cHeader = includeDir / pName + prefix + '.h'
     # if cFile doesn't exist create Source
     if run_command('[', '-f', cFile, ']').returncode() != 0
-        run_command(wayland_scanner, 'private-code', cFile)
+        run_command(wayland_scanner, 'private-code', p, cFile)
         message('generate: ' + cFile)
     endif
     # if cHeader doesn't exist create Header
     if run_command('[', '!', '-f', cHeader, ']').returncode() != 0
-        run_command(wayland_scanner, 'server-header', cHeader)
+        run_command(wayland_scanner, 'server-header', p, cHeader)
         message('generate: ' + cHeader)
     endif
 endforeach
@@ -25,7 +26,6 @@ srcs = files(
   'src/coreUtils.c',
   'src/xdg-shell-protocol.c',
   'src/wlr-layer-shell-unstable-v1-protocol.c',
-  'src/xdg-shell-protocol.c',
   'src/parseConfigUtils.c',
   'src/tile/tile.c',
   'src/tile/tileUtils.c',
