fix more bugs in meson.build

--- a/src/core/meson.build
+++ b/src/core/meson.build
@@ -4,16 +4,17 @@ inc = include_directories(includeDir)
 
 foreach p:protocols
     pName = run_command('basename', p, '.xml').stdout().strip()
-    prefix = '-protocol'
-    cFile = srcDir / pName + prefix +'.c'
-    cHeader = includeDir / pName + prefix + '.h'
+    postfix = '-protocol'
+    cFile = srcDir / pName + postfix +'.c'
+    cHeader = includeDir / pName + postfix + '.h'
     # if cFile doesn't exist create Source
     if run_command('[', '-f', cFile, ']').returncode() != 0
         run_command(wayland_scanner, 'private-code', p, cFile)
         message('generate: ' + cFile)
     endif
     # if cHeader doesn't exist create Header
-    if run_command('[', '!', '-f', cHeader, ']').returncode() != 0
+    if run_command('[', '-f', cHeader, ']').returncode() != 0
+        message('works\n\n')
         run_command(wayland_scanner, 'server-header', p, cHeader)
         message('generate: ' + cHeader)
     endif
