--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,25 @@
-language: c
 os: linux
 
 services:
-    - docker
-archlinux:
-    repos:
-        - papyros=http://dash.papyros.io/repos/$repo/$arch
-    packages:
-        - python
-        - perl
-        - go-git
-        - papyros-shell
-    mount:
-        - ~/.pkg-cache:/var/cache/pacman/pkg
+- docker
 
-    before_install:
-        - "sudo ln -s /dev/null /etc/pacman.d/hooks/package-cleanup.hook"
-        - sudo pacman -S --noconfirm install meson
-        - sudo pacman -S --noconfirm install wayland
-        - sudo pacman -S --noconfirm install julia
-        - sudo pacman -S --noconfirm install wlroots
-    script:
-        - mkdir build
-        - meson build
-        - cd build
-        - meson compile
-        - meson install
+archlinux:
+  repos:
+  - papyros=http://dash.papyros.io/repos/$repo/$arch
+  packages:
+  # pacman packages
+  - python
+  - perl
+  # aur packages
+  - go-git
+  # packages from papyros repo
+  - papyros-shell
+  mount:
+  - ~/.pkg-cache:/var/cache/pacman/pkg
+  before_install:
+  - "sudo ln -s /dev/null /etc/pacman.d/hooks/package-cleanup.hook"
+  script:
+  - "./build_script.sh"
+
 script:
-    - "curl -s https://raw.githubusercontent.com/mikkeloscar/arch-travis/master/arch-travis.sh | bash"
+- "curl -s https://raw.githubusercontent.com/mikkeloscar/arch-travis/master/arch-travis.sh | bash"
