--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,19 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
 docker:
     - image: archlinux
 updatepackage:
     name: Update Packages
     command: sudo pacman -Syu --noconfirm
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
+jobs:
+    one:
+        docker:
+            - image: archlinux
+        steps:
+            - checkout
+            - run: echo "works"
+            - run: sleep 15
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
-    jobs:
-      - welcome/run
+    one:
+        jobs:
+            - one
