--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,11 @@ jobs:
         docker:
             - image: archlinux
         steps:
+            - run: sudo pacman -S meson
+            - run: sudo pacman -S wlroots
+            - run: sudo pacman -S meson
+            - run: sudo pacman -S wayland
             - checkout
-            - run: echo "works"
-            - run: sleep 15
 workflows:
     one:
         jobs:
