--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,12 @@ jobs:
             - run: pacman -S --noconfirm meson
             - run: pacman -S --noconfirm wayland
             - checkout
+            - run: ls
+            - run: cd juliawm
+            - run: meson build
+            - run: cd build
+            - run: meson compile
+            - run: meson install
 workflows:
     one:
         jobs:
