--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
             - run: pacman -S --noconfirm wlroots
             - run: pacman -S --noconfirm meson
             - run: pacman -S --noconfirm wayland
+            - checkout
             - run: ls
             - run: meson build
             - run: cd build
