--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,10 @@ jobs:
             - image: archlinux
         steps:
             - run: pacman -Sy --noconfirm
+            - run: pacman -S --noconfirm gcc
             - run: pacman -S --noconfirm meson
             - run: pacman -S --noconfirm wlroots
-            - run: pacman -S --noconfirm meson
+            - run: pacman -S --noconfirm julia
             - run: pacman -S --noconfirm wayland
             - checkout
             - run: ls
