--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
             - image: archlinux
         steps:
             - run: pacman -Sy --noconfirm
-            - run: pacman -S --noconfirm gcc
+            - run: pacman -S --noconfirm base-devel
             - run: pacman -S --noconfirm meson
             - run: pacman -S --noconfirm wlroots
             - run: pacman -S --noconfirm julia
