--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ jobs:
             - run: pacman -S --noconfirm wlroots
             - run: pacman -S --noconfirm julia
             - run: pacman -S --noconfirm wayland
+            - run: pacman -S --noconfirm wayland-protocols
             - checkout
             - run: ls
             - run: meson build
