--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
             - run: pacman -S --noconfirm meson
             - run: pacman -S --noconfirm wlroots
             - run: pacman -S --noconfirm julia
+            - run: pacman -S --noconfirm cairo
             - run: pacman -S --noconfirm wayland
             - run: pacman -S --noconfirm wayland-protocols
             - checkout
