--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,3 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 docker:
     - image: archlinux
@@ -21,12 +20,8 @@ jobs:
             - checkout
             - run: ls
             - run: meson build
-            - run: ls
-            - run: cd build
-            - run: pwd
-            - run: meson compile
-            - run: ls
-            - run: meson install
+            - run: cd build && meson compile
+            - run: cd build && meson install
 workflows:
     one:
         jobs:
