--- a/src/core/meson.build
+++ b/src/core/meson.build
@@ -24,10 +24,10 @@ srcs = files(
   'src/client.c',
   'src/parseConfig.c',
   'src/juliawm.c',
-  'src/coreUtils.c',
+  'src/utils/coreUtils.c',
   'src/xdg-shell-protocol.c',
   'src/wlr-layer-shell-unstable-v1-protocol.c',
-  'src/parseConfigUtils.c',
+  'src/utils/parseConfigUtils.c',
   'src/tile/tile.c',
   'src/tile/tileUtils.c',
   'src/tile/tileTexture.c',
