add foreign toplevel protocol

--- a/meson.build
+++ b/meson.build
@@ -8,6 +8,7 @@ protocolsDir = 'protocols'
 protocols = files(
     protocolsDir + '/wlr-layer-shell-unstable-v1.xml',
     protocolsDir + '/xdg-shell.xml',
+    protocolsDir + '/wlr-foreign-toplevel-management-unstable-v1.xml',
     )
 root = meson.source_root()
 subdir('src')
