--- a/src/core/meson.build
+++ b/src/core/meson.build
@@ -23,7 +23,7 @@ endforeach
 srcs = files(
   'src/client.c',
   'src/parseConfig.c',
-  'src/juliawm.c',
+  'src/main.c',
   'src/utils/coreUtils.c',
   'src/xdg-shell-protocol.c',
   'src/wlr-layer-shell-unstable-v1-protocol.c',
