--- a/src/meson.build
+++ b/src/meson.build
@@ -1,4 +1,4 @@
-add_project_arguments('-DWLR_USE_UNSTABLE', '-Werror', '-Wno-uninitialized', 
+add_project_arguments('-g3', '-DWLR_USE_UNSTABLE', '-Werror', '-Wno-uninitialized', 
                      '-I/usr/include/julia', language: 'c')
 
 deps = [\
