--- a/src/meson.build
+++ b/src/meson.build
@@ -2,10 +2,11 @@ add_project_arguments('-g3', '-DWLR_USE_UNSTABLE', '-Werror', '-Wno-uninitialize
                      '-I/usr/include/julia', language: 'c')
 
 deps = [\
-    dependency('wlroots'),
     dependency('xcb'),
     dependency('xkbcommon'),
     dependency('wayland-server'),
+    dependency('wayland-egl'),
+    dependency('wlroots'),
     dependency('cairo')
     ]
 
@@ -15,5 +16,5 @@ executable(
     'debug.c',
     link_args: '-ljulia',
     install: true,
-    install_dir: root / srcDir,
+    install_dir: root / srcDir
     )
