--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,12 +18,13 @@ jobs:
             - run: pacman -S --noconfirm wayland
             - run: pacman -S --noconfirm wayland-protocols
             - run: pacman -S --noconfirm cmocka
+            - run: pacman -S --noconfirm gcovr
             - checkout
             - run: ls
             - run: meson -Db_coverage=true build
             - run: cd build && meson compile
             - run: cd build && meson test
-            - run: cd build && meson coverage-xml
+            - run: ninja -C build coverage
             - run: bash <(curl -s https://codecov.io/bash)
 workflows:
     one:
