--- a/src/meson.build
+++ b/src/meson.build
@@ -14,7 +14,7 @@ subdir('core/')
 executable(
     'debug',
     'debug.c',
-    link_args: '-ljulia',
+    link_args: ['-ljulia'],
     install: true,
     install_dir: root / srcDir
     )
