update test suite names

--- a/src/core/test/meson.build
+++ b/src/core/test/meson.build
@@ -10,7 +10,7 @@ t = executable('client_test', ['client_test.c', srcs],
                link_with: [wmlib],
                include_directories: inc,
               )
-test('test', t)
+test('client', t)
 t = executable('tagset_test', ['tagset_test.c', srcs], 
                c_args: c_args,
                link_args: link_args,
