--- a/src/core/test/meson.build
+++ b/src/core/test/meson.build
@@ -27,3 +27,11 @@ t = executable('stringUtils_test', ['utils/stringUtils_test.c', srcs],
                include_directories: inc,
               )
 test('stringUtils', t)
+t = executable('gapUtils_test', ['utils/gapUtils_test.c', srcs], 
+               c_args: c_args,
+               link_args: link_args,
+               dependencies: [deps, extraLibs],
+               link_with: [wmlib],
+               include_directories: inc,
+              )
+test('gapUtils', t)
