--- a/src/core/test/meson.build
+++ b/src/core/test/meson.build
@@ -1,37 +1,37 @@
 # unit test setup
-extraLibs = [dependency('check')]
-c_args = ['-I..']
-link_args = ['-ljulia', '-lm']
+# extraLibs = [dependency('check')]
+# c_args = ['-I..']
+# link_args = ['-ljulia', '-lm']
 
-t = executable('client_test', ['client_test.c', srcs], 
-               c_args: c_args,
-               link_args: link_args,
-               dependencies: [deps, extraLibs],
-               link_with: [wmlib],
-               include_directories: inc,
-              )
-test('client', t)
-t = executable('tagset_test', ['tagset_test.c', srcs], 
-               c_args: c_args,
-               link_args: link_args,
-               dependencies: [deps, extraLibs],
-               link_with: [wmlib],
-               include_directories: inc,
-              )
-test('tagset', t)
-t = executable('stringUtils_test', ['utils/stringUtils_test.c', srcs], 
-               c_args: c_args,
-               link_args: link_args,
-               dependencies: [deps, extraLibs],
-               link_with: [wmlib],
-               include_directories: inc,
-              )
-test('stringUtils', t)
-t = executable('gapUtils_test', ['utils/gapUtils_test.c', srcs], 
-               c_args: c_args,
-               link_args: link_args,
-               dependencies: [deps, extraLibs],
-               link_with: [wmlib],
-               include_directories: inc,
-              )
-test('gapUtils', t)
+# t = executable('client_test', ['client_test.c', srcs], 
+#                c_args: c_args,
+#                link_args: link_args,
+#                dependencies: [deps, extraLibs],
+#                link_with: [wmlib],
+#                include_directories: inc,
+#               )
+# test('client', t)
+# t = executable('tagset_test', ['tagset_test.c', srcs], 
+#                c_args: c_args,
+#                link_args: link_args,
+#                dependencies: [deps, extraLibs],
+#                link_with: [wmlib],
+#                include_directories: inc,
+#               )
+# test('tagset', t)
+# t = executable('stringUtils_test', ['utils/stringUtils_test.c', srcs], 
+#                c_args: c_args,
+#                link_args: link_args,
+#                dependencies: [deps, extraLibs],
+#                link_with: [wmlib],
+#                include_directories: inc,
+#               )
+# test('stringUtils', t)
+# t = executable('gapUtils_test', ['utils/gapUtils_test.c', srcs], 
+#                c_args: c_args,
+#                link_args: link_args,
+#                dependencies: [deps, extraLibs],
+#                link_with: [wmlib],
+#                include_directories: inc,
+#               )
+# test('gapUtils', t)
