fix install scripts

--- a/meson.build
+++ b/meson.build
@@ -33,5 +33,7 @@ foreach p:protocols
     endif
 endforeach
 
+meson.add_install_script('install.sh')
+# config files
 subdir('src')
 subdir('test')
