refactor alot of names

--- a/src/meson.build
+++ b/src/meson.build
@@ -15,8 +15,12 @@ deps = [\
 
 main = files('main.c')
 srcs = files(
+  'main.c',
+  'keybinding.c',
   'monitor.c',
   'layout.c',
+  'stringop.c',
+  'ipc-server.c',
   'wlr-layer-shell-unstable-v1-protocol.c',
   'client.c',
   'server.c',
@@ -26,23 +30,22 @@ srcs = files(
   'utils/coreUtils.c',
   'utils/stringUtils.c',
   'utils/parseConfigUtils.c',
+  'lib/info/info.c',
+  'lib/actions/overlay.c',
+  'lib/actions/actions.c',
+  'lib/actions/config.c',
+  'translationLayer.c',
   'xdg-shell-protocol.c',
+  'command.c',
   'tagset.c',
+  'ipc-json.c',
+  'popup.c',
   'render/render.c',
   'tile/tileUtils.c',
   'tile/tileTexture.c',
   'tile/tile.c',
   'wlr-foreign-toplevel-management-unstable-v1-protocol.c',
-  'keybinding.c',
-  'translationLayer.c',
-  'actions.c',
-  'info.c',
-  'ipc-json.c',
   'root.c',
-  'ipc-server.c',
-  'command.c',
-  'stringop.c',
-  'popup.c',
 )
 
 libName = 'juliawm'
