switch from tags to workspaces

--- a/src/meson.build
+++ b/src/meson.build
@@ -15,39 +15,42 @@ deps = [\
 
 main = files('main.c')
 srcs = files(
-  'main.c',
-  'keybinding.c',
-  'monitor.c',
-  'layout.c',
-  'stringop.c',
-  'ipc-server.c',
-  'wlr-layer-shell-unstable-v1-protocol.c',
   'client.c',
-  'server.c',
-  'parseConfig.c',
-  'utils/gapUtils.c',
-  'utils/writeFile.c',
-  'utils/coreUtils.c',
-  'utils/stringUtils.c',
-  'utils/parseConfigUtils.c',
-  'lib/info/info.c',
-  'lib/actions/overlay.c',
+  'command.c',
+  'container.c',
+  'ipc-json.c',
+  'ipc-server.c',
+  'keybinding.c',
+  'layout.c',
   'lib/actions/actions.c',
   'lib/actions/config.c',
-  'translationLayer.c',
-  'xdg-shell-protocol.c',
-  'command.c',
-  'tagset.c',
-  'ipc-json.c',
+  'lib/actions/overlay.c',
+  'lib/info/info.c',
+  'main.c',
+  'monitor.c',
+  'output.c',
+  'parseConfig.c',
   'popup.c',
   'render/render.c',
-  'tile/tileUtils.c',
-  'tile/tileTexture.c',
-  'tile/tile.c',
-  'wlr-foreign-toplevel-management-unstable-v1-protocol.c',
   'root.c',
-  'container.c',
-)
+  'server.c',
+  'stringop.c',
+  'tabframe.c',
+  'tile/tile.c',
+  'tile/tileTexture.c',
+  'tile/tileUtils.c',
+  'translationLayer.c',
+  'utils/coreUtils.c',
+  'utils/gapUtils.c',
+  'utils/parseConfigUtils.c',
+  'utils/stringUtils.c',
+  'utils/writeFile.c',
+  'wlr-foreign-toplevel-management-unstable-v1-protocol.c',
+  'wlr-layer-shell-unstable-v1-protocol.c',
+  'workspace.c',
+  'workspaceset.c',
+  'xdg-shell-protocol.c',
+  )
 
 libName = 'juliawm'
 wmlib = executable(libName,
