fix tiling issues with x11 based applications

--- a/src/meson.build
+++ b/src/meson.build
@@ -49,6 +49,7 @@ srcs = files(
   'wlr-layer-shell-unstable-v1-protocol.c',
   'workspace.c',
   'xdg-shell-protocol.c',
+  'xwayland.c',
   )
 
 libName = 'juliawm'
