improve resize mechanism

--- a/config/meson.build
+++ b/config/meson.build
@@ -2,6 +2,8 @@ configFiles = files(
   'init.lua',
   'defaultConfig.lua',
   'tile.lua',
+  'tilehooked.lua',
+  'tileutils.lua',
 )
 
 install_data(configFiles, install_dir: '/etc/juliawm')
