comment out monrules and rules because they cause segfaults

--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "juliawm"
+name = "japokwm"
 uuid = "693f1b80-3e1a-4659-9766-75ba891126f4"
 authors = ["Jakob Schlanstedt <johann123j@gmail.com> and contributors"]
 version = "0.1.0"
