--- a/config/meson.build
+++ b/config/meson.build
@@ -6,5 +6,5 @@ configFiles = files(
   'tileutils.lua',
 )
 
-install_data(configFiles, install_dir: '/etc/juliawm')
-install_subdir('layouts', install_dir: '/etc/juliawm')
+install_data(configFiles, install_dir: '/etc/japokwm')
+install_subdir('layouts', install_dir: '/etc/japokwm')
