--- a/src/meson.build
+++ b/src/meson.build
@@ -1,4 +1,4 @@
-add_project_arguments('-DWLR_USE_UNSTABLE', '-Werror', '-Wno-uninitialized', language: 'c')
+add_project_arguments('-rdynamic', '-DWLR_USE_UNSTABLE', '-Werror', '-Wno-uninitialized', language: 'c')
 
 deps = [\
     dependency('xcb'),
