further improve cursor

--- a/src/meson.build
+++ b/src/meson.build
@@ -15,42 +15,43 @@ deps = [\
 
 main = files('main.c')
 srcs = files(
-    'main.c',
-    'output.c',
-    'xwayland.c',
-    'keybinding.c',
-    'monitor.c',
-    'layout.c',
-    'stringop.c',
-    'ipc-server.c',
-    'wlr-layer-shell-unstable-v1-protocol.c',
     'client.c',
-    'server.c',
-    'parseConfig.c',
-    'utils/gapUtils.c',
-    'utils/writeFile.c',
-    'utils/coreUtils.c',
-    'utils/stringUtils.c',
-    'utils/parseConfigUtils.c',
-    'lib/config/localconfig.c',
-    'lib/config/config.c',
-    'lib/info/info.c',
-    'lib/actions/libcontainer.c',
-    'lib/actions/actions.c',
-    'translationLayer.c',
-    'options.c',
-    'container.c',
-    'xdg-shell-protocol.c',
     'command.c',
+    'container.c',
+    'cursor.c',
     'ipc-json.c',
+    'ipc-server.c',
+    'keybinding.c',
+    'layout.c',
+    'lib/actions/actions.c',
+    'lib/actions/libcontainer.c',
+    'lib/config/config.c',
+    'lib/config/localconfig.c',
+    'lib/info/info.c',
+    'lib/layout/lib_layout.c',
+    'main.c',
+    'monitor.c',
+    'options.c',
+    'output.c',
+    'parseConfig.c',
     'popup.c',
     'render/render.c',
-    'tile/tileUtils.c',
-    'tile/tile.c',
-    'workspace.c',
-    'wlr-foreign-toplevel-management-unstable-v1-protocol.c',
     'root.c',
-    'lib/layout/lib_layout.c',
+    'server.c',
+    'stringop.c',
+    'tile/tile.c',
+    'tile/tileUtils.c',
+    'translationLayer.c',
+    'utils/coreUtils.c',
+    'utils/gapUtils.c',
+    'utils/parseConfigUtils.c',
+    'utils/stringUtils.c',
+    'utils/writeFile.c',
+    'wlr-foreign-toplevel-management-unstable-v1-protocol.c',
+    'wlr-layer-shell-unstable-v1-protocol.c',
+    'workspace.c',
+    'xdg-shell-protocol.c',
+    'xwayland.c',
   )
 
 libName = 'japokwm'
